Fix the overflow --

--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,10 @@
   font-family: poppins !important;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 /* For the header links */
 .header {
   position: relative;
